Change release date

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,8 @@
-﻿Version 10.0 (July 3, 2019)
+﻿Version 10.0 (July 31, 2019)
    • Code cleanup
    • Update to .NET Framework 4.7.2
    • Update to Visual Studio 2019
+   • Converted to C#
    • Export to KeyStudio for iOS
 
 Version 9.2 (August 20, 2018)
