--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,8 +2,12 @@
    • Code cleanup
    • Update to .NET Framework 4.7.2
    • Update to Visual Studio 2019
-   • Converted to C#
-   • Export to KeyStudio for iOS
+   • Convert old ZiaFile code to INI code
+   • Multiple pages can now exist with the same name
+   • Remove Tundra library
+   • Convert all except UI to C#
+   • Remove unused code
+   • Remove TextArt feature
 
 Version 9.2 (August 20, 2018)
    • Minor startup improvements
