--- a/Language Pad/frmDictionary.resx
+++ b/Language Pad/frmDictionary.resx
@@ -169,12 +169,12 @@
   <data name="ExportHtmlToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAELSURBVEhLYxgFIxD4+vr+JwX7+Ph0QLUSB0CaoEyCgCxL
-        yLGAJEvItYBoSyixgCi9RCnCAYaOBf7+/rJAdWuAYb7d29t7JRAv8/PzU4dK4weELIAa/tDLy+sK0AJL
-        kBiQzgLyb4PkwIrwAUIWAOWXAA2cGRISwgnip6WlsQLFdgJ9sRkovgqsCB8gwoJjwOAwAWIpEB/oaiuQ
-        Hij+CFaEDxBhASjs64D0DyCudXV15QZaogv0wS6g+AeoMtyACAuWArGrh4fHJ2C4fwYaygUVXwiKcLAi
-        fABkAS4MkgelFiB7ExDfAhoeABWTAvL3Ay2VAfEpBqDUAkqaoEgFGrwaSC+mmuGjgMqAgQEA9+Gs7hFh
-        oJcAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAELSURBVEhL7VIpDgIxFB2DAG4wAY3CYcA3M5kVMWcYwR1A
+        cwUkYUlYFAgCBscJUKC4AYvBwftN7XQ6iyHMS17av772t1qBP4Trup8kdBxnKErVQEViG4tUImkEEomk
+        FVAWySKgVKuUFIHfEfB9v468NWa+s217Ac49z2uIsBxxAqL5zbKsMwTa5MPag32lGE+SIU4A8SkajoIg
+        KJMdhmEJvj1usYV/yZNkUBA4YRwtUCcbp+5QjeCDJ8mgIECzH2B9g33GWBUiTdzgAP9dpEVDQWAGMsMw
+        npj7C00rwj+mB+dJMpBAFClOvwX7DXhB867w6bCPpmnWyM4M+i30NelR0XiFdZJb8wI5Q9O+8Jqs684T
+        OiUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="SymbolsToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -201,19 +201,19 @@
   <data name="AccentMarkToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADiSURBVEhL7ZRNDoIwEIV7D/U+hFLxUCYknkfcKV7Jn72+
-        SR5kFtNkCtEVXzKLPoZvSIEGi5TSZ07x9pUf0DTNAXt8R71Zwx7w8jIgO6HMl4rq2DYPPvkkxPocY9xU
-        VbXFumeW2F4OBLIt0wAR81Jo23bHATdG5dR1/dIDGE9w6JPLcrQ8N8DK3Wi5JcrlbrTcEuVyN1puiXK5
-        Gy23RLncjZZbolzuxvOZoh5cloObh1EuZf1o+LOvjMqRA00PQPUyhPKLZGiJbJ8HJB3lVh3Ztgw50OTM
-        kXciJduy+MlX/kQIX4NR3K7sU0fGAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADlSURBVEhL7ZRNDoIwEIV7D/U8EErFQ5mYeB5xp3glf/b6
+        JnmSWUyTKURXfMks+hi+IQUaLFJK7ynF2xd+QNu2O+zxDfViDVvAy/OA7IgyXyrqwLZp8MlHIdanGOOq
+        rus11j2zxPZyIJBtGQeImJdC13UbDrgyKqdpmqcewHhEsqqqHlyWo+W5AVbuRsstUS53o+WWKJe70XJL
+        lMvdaLklyuVutNwS5XI3ns8UdeeyHNw8fOVS1o+GP/vCqBw50PQAVC9DKD9LhpbI9mlAcqDcqj3b5iEH
+        mpw58k6kZFtmP/nCnwjhA3Hn3KvTg3hgAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="AddToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACESURBVEhL7ZFRCoAwDEN3kXkY/3c8P/SKfu4ASqCCrB3t
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACESURBVEhL7ZFRCoAwDEN3kXkY/3c7f/SKfu4ASqCCrB3t
         Vhj72IMwGkKCGBbzkVJ6PKKaOlLI4zGGDHhENXWkkMdjIBTP3CXzwHblPR75xgtPuz/MA3i10vIGTQNA
-        Ky3v5gGglf5v84D0Ay3q+gLg8RgIeUQ1daSQx2MMGfCIahbTEMILDgFVQJxiT+EAAAAASUVORK5CYII=
+        Ky3v5gGglf5v84D0Ay3q+gLg8RgIeUQ1daSQx2MMGfCIahbTEMIL11xVNO96S3YAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="RemoveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -227,13 +227,13 @@
   <data name="FontToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFNSURBVEhL7ZS9SsRAFIXTaKFgJytWPoQ+gQaSzd82sbRM
-        o9Uq5BVstbUStNROG7uVbawEwYcQtdmIxfr33XCUhVXYZK10Dxwm98ydc5O5M3Em+Dvo5a1usRNfKqyO
-        OI7Xoih6N4ZhuCr5C2Ze5K2OwurA+OCzgD1L/h1kWTaF6QO8hlfwMU3TaU2PD7YEz/LNc7it51DTJcbq
-        AWbH8C1JkiV6seh53ivxkaZL1O4Bbz/TbDZ7jF1JVrADC9d1ZyXVB0br0LZkS5IV3TSNr0kl1QdGp2zJ
-        C2NDkkM8T9yn0Imkej3AaA6jZ/iE2cUgTbM5y7HcWj0IgmADE9ueQ0x3B2mazVmO0qsDg3Pf9++/O/O6
-        G3fwTFI1sLAB+3BP0hD4kn3L4ZQtSBodLCwvFCdlWdIQKLBiOYxtSaODhfZbuFX4I8i5sVyFE/w/OM4H
-        H2CgW4P//oAAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFPSURBVEhL7ZQ/S8NQFMWz6KDgJhUnP4R+Ag1J87dLHB27
+        2EmFfAVXXZ0EHXXTxa3SxUkQ/BCiLq041H+/G45SqEKTOmkPHF7uefedm7z7XpwJ/g66eaPT20kuFZZH
+        kiRrcRy/G6MoWpX8BTPv5Y22wvLA+OCzgD1L/h00m80pTB/gNbyCj1mWTWt6fLAleBZvnsNtPUeaLjBW
+        DzA7hm9pmi7Ri0XP816JjzRdoHIPePuZIAi6jB1JVrANe67rzkqqDozWoW1JS5IV3TSNr8kkVQdGp2zJ
+        C2NNkuP7/jxxn0Inkqr1AKM5jJ7hE2YXgzTN5izHciv1IAzDDUxsew4x3R2kaTZnOUovDwzO6/X6/Xdn
+        XnfjDp5JKgcW1mAf7kkaAl+ybzmcsgVJo4OFxYXipCxLGgIFViyHcUvS6GCh/RZuFf4Icm4sV+EE/w+O
+        8wEBw6BVXwDclwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="FindToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
